@@ -13,58 +13,32 @@
 
 <bookinfo>
   <title>The Cal3D User's Guide</title>
-  <subtitle>Version 0.10</subtitle>
-
-  <authorgroup>
-    <author>
-      <firstname>Bruno</firstname>
-      <surname>Heidelberger</surname>
-      <affiliation>
-        <address>
-          <email>beosil@swileys.com</email>
-        </address>
-      </affiliation>
-    </author>
-  </authorgroup>
+  <subtitle>Version 0.11</subtitle>
 
   <copyright>
-    <year>2001-2005</year>
+    <year>2001-2006</year>
+    <holder><ulink url="mailto:l.desmecht@skynet.be">Laurent Desmecht</ulink></holder>
+    <holder><ulink url="mailto:loic@dachary.org">Loic Dachary</ulink></holder>
     <holder><ulink url="mailto:beosil@swileys.com">Bruno Heidelberger</ulink></holder>
   </copyright>
 
-  <legalnotice>
-    <para>
-      <blockquote>
-        <title>Copyright</title>
-        <para>
-          Copyright (C) 2001-2005 <ulink url="mailto:beosil@swileys.com">Bruno Heidelberger</ulink>
-        </para>
-        <para>
-          For answers to many frequently asked questions about Cal3D, check out
-          the <ulink url="./cal3dfaq.html">Cal3D FAQ.</ulink>
-        </para>
-        <para>
-          Permission is granted to copy, distribute and/or modify this document
-          under the terms of the GNU Free Documentation License, Version 1.1
-          or any later version published by the Free Software Foundation.
-          A copy of the license is included in <xref linkend="gfdl">.
-        </para>
-      </blockquote>
-    </para>
-  </legalnotice>
+  <date>Last updated: 29. June 2006</date>
 
-  <date>Last updated: 4. January 2005</date>
-
-  <releaseinfo>Initial Release</releaseinfo>
+  <releaseinfo>Draft Release</releaseinfo>
 
   <abstract>
     <para>
       This documentation describes <ulink url="http://gna.org/projects/cal3d/">Cal3D</ulink>,
       a free 3d character animation library.
+
+      Please take a minute of your time to <ulink url="https://gna.org/bugs/?func=additem&amp;group=cal3d">report
+        problems</ulink> when compiling or using cal3d. 
+
       <important>
         <para>
-          This is.the first version of the Cal3D User's Guide. It surely contains errors,
-          obscure descriptions and other anomalies. Please report them to the authors, and
+          This is a draft version of the Cal3D User's Guide. It surely contains errors,
+          obscure descriptions and other anomalies. Please report them to the authors, 
+          or to the <ulink url="https://mail.gna.org/listinfo/cal3d-devel/">mailing list</ulink> and
           help us make it better, thanks!
         </para>
       </important>
